<resources>
    <string name="app_name">Wizard</string>
    <string name="title_activity_game_play">GamePlayActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="wer_bist_du">wer bist du?</string>
    <string name="game_id">game id</string>
    <string name="hallo_zauberlehrling">Hallo Zauberlehrling</string>
    <string name="neues_spiel_starten">neues Spiel Starten</string>
    <string name="spiel_beitreten">Spiel beitreten</string>
    <string name="anleitung">Anleitung</string>
    <string name="refresh_player_list">refresh player list</string>
    <string name="start_game">next</string>
    <string name="punkte">0</string>
    <string name="runde">0</string>
    <string name="spiel_starten">Spiel Starten</string>
    <string name="gib_deinen_namen_ein">Gib deinen Namen ein</string>
    <string name="aktuelle_spieler">Aktuelle Spieler</string>
</resources>
